--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,200 @@
-body {
-    color: green;
+/* Reset CSS */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
+a {
+  text-decoration-line: none;
+  color: inherit;
+}
+a:hover { 
+  text-decoration: none; 
+  color: inherit;
+}
+a:visited {
+  text-decoration: none; 
+  color: inherit;
+}
+a:focus {
+  text-decoration: none;
+  color: inherit;
+}
+a:hover, a:active {
+  text-decoration: none;
+  color: inherit;
+}
+#myfooter a {
+  text-decoration: underline;
+}
+#preamble a {
+  color: rgb(160, 49, 85);
+}
+#preamble a:hover {
+  text-decoration: underline;
+}
+
+
+body {
+  color: black;
+  font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /*font-family: nta, Arial, sans-serif;*/
+}
+
+#wrapper {
+  display: grid;
+  grid-template-columns: 1fr 960px 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: 
+    "header header header"
+    ". main ."
+    "footer footer footer";
+}
+#main {
+  grid-area: main;
+}
+
+header {
+  color: white;
+  background: black;
+  grid-area: header;
+
+  display: grid;
+  grid-template-columns: 1fr 960px 1fr;
+  grid-template-areas: 
+    ". hc .";
+}
+#header-content {
+  grid-area: hc;
+  font-size: 20px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-template-areas: 
+    "header-stat-link . beta feedback";
+}
+#header-stat-link {
+  grid-area: header-stat-link;
+  font-size: 30px;
+  font-weight: 700;
+  border-bottom: 1px solid transparent;
+  
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-template-areas: 
+    "gov-logo header-stat-text";
+
+}
+#header-stat-link:hover {
+  text-decoration: none;
+  color:white;
+  border-bottom: 1px solid white;
+}
+#gov-logo {
+  grid-area: gov-logo;
+  width: 36px;
+  height: 32px;
+  margin-right: 4px;
+  place-self: center;
+}
+#header-stat-text {
+  grid-area: header-stat-text;
+  place-self: center;
+}
+
+#beta {
+  grid-area: beta;
+  place-self: center;
+  background: #4c2c92;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+#feedback {
+  grid-area: feedback;
+  
+  display: grid;
+  justify-content: start;
+  white-space: pre-wrap;
+  grid-template-columns: auto .;
+  grid-template-rows: auto;
+  grid-template-areas: 
+    "feedback-text feedback-link";
+}
+#feedback-text {
+  grid-area: feedback-text;
+  place-self: center;
+}
+#feedback-link {
+  grid-area: feedback-link;
+  text-decoration: none;
+  place-self: center;
+  color: #4c2c92;
+}
+
+
+h1 { 
+  font-size: 36px; 
+  font-weight: 700; 
+  line-height: 1.2;  
+  letter-spacing: -.1rem; 
+  grid-area: myh1;
+  border-top: 10px solid rgb(236, 9, 141);
+  border-bottom: 3px solid rgb(0, 0, 0);
+  margin-bottom: 18px;
+  padding-top: 30px;
+  padding-bottom: 10px;
+}
+
+/* creates space between paragraphs for dcc.markdown */
+/* adding a margin-bottom creates whitespace below footer */
+.markdown p {
+  margin-top: 16px;
+}
+
+#myfooter {
+  grid-area: footer;
+  background-color: rgb(222, 224, 226);
+  border-top: 1px solid rgb(191, 193, 195);
+  padding: 10px;
+  margin-top: 80px;
+  font-size: 14px;
+}
+#myfooter img {
+  height: 17px;
+  width: 40px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
