--- a/assets/style.css
+++ b/assets/style.css
@@ -39,6 +39,13 @@ a:hover, a:active {
   text-decoration: none;
   color: inherit;
 }
+._dash-undo-redo {
+  display: none;
+}
+
+
+
+
 #myfooter a {
   text-decoration: underline;
 }
@@ -121,7 +128,6 @@ header {
   grid-area: header-stat-text;
   place-self: center;
 }
-
 #beta {
   grid-area: beta;
   place-self: center;
@@ -153,6 +159,12 @@ header {
   color: #4c2c92;
 }
 
+.mysection {
+  border: 1px solid rgb(221, 221, 221);
+  padding: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
 h1 { 
   font-size: 36px; 
@@ -173,6 +185,28 @@ h1 {
   margin-top: 16px;
 }
 
+.mydropdown {
+  margin-right: 20px;
+}
+#dropdowns {
+  margin-top: 22px;
+  display: grid;
+  grid-template-columns: 270px 270px 270px;
+  grid-template-rows: auto;
+  grid-template-areas: 
+    "breakdown-dropdown indexed-dropdown cvm-dropdown";
+}
+#breakdown-dropdown {
+  grid-area: breakdown-dropdown;
+}
+#indexed-dropdown {
+  grid-area: indexed-dropdown;
+}
+#cvm-dropdown {
+  grid-area: cvm-dropdown;
+}
+
+
 #myfooter {
   grid-area: footer;
   background-color: rgb(222, 224, 226);
@@ -185,16 +219,5 @@ h1 {
   height: 17px;
   width: 40px;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 
